# ubmark

./: .gitignore  Cargo.toml  build.rs  ui.toml
src/: main.rs
ui/: appwindow.60  side_bar.60
